--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="./assets/QL_logo.svg" />
+  <link rel="icon" type="image/svg+xml" href="./assets/QL.png" />
   <link rel="stylesheet" href="style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
@@ -197,49 +197,56 @@
       <h1 class="text-center" style="font-size: 60px; margin-bottom: 30px; font-family: League;">Our <span
         style="color:#307EFF ;">S</span>ervices</h1>
 
-      <div class="services-image-web-section">
-        <lottie-player src="https://assets8.lottiefiles.com/packages/lf20_xsnsvpbs.json" class="lottie" background="transparent"
-          speed="1" style="width: 400px; height: 400px;" loop autoplay>
-        </lottie-player>
-      </div>
+
+            <div class="services-image-web-section">
+              <lottie-player src="https://assets8.lottiefiles.com/packages/lf20_xsnsvpbs.json" class="lottie" background="transparent"
+                speed="1" style="width: 400px; height: 400px;" loop autoplay>
+              </lottie-player>
+            </div>
+
 
       <div class="services-content-web-section">
-        <div class="title" style="font-family: League;">
-          <h2>Web App <span style="border-bottom: 2px solid #307eff;">Development</span></h2>
-        </div>
-        <div class="content">
-          <p>Fully customized, intuitive, and feature-rich bespoke web design & development to expand the
-            reach
-            of your
-            business.
-            We build engaging, secure and high performance websites,
-            products and custom web applications using trending technologies
-            and frameworks across platforms.
-            We help you transform your e-commerce organization according to the changing demands in the
-            digital industry, along with increased scalability and productivity.
-          </p>
-        </div>
-        <div class="list">
-          <ul>
-            <li> <span style="color: #307eff; font-weight:bold">
-                &#x3c;</span> Content Mangement System <span style="color: #307eff; font-weight:bold">/>
-              </span> </li>
-            <li> <span style="color: #307eff; font-weight:bold">
-                &#x3c;</span> e-Commerce <span style="color: #307eff; font-weight:bold">/>
-              </span> </li>
-            <li> <span style="color: #307eff; font-weight:bold">
-                &#x3c;</span> Custom Web Application <span style="color: #307eff; font-weight:bold">/>
-              </span> </li>
 
-          </ul>
-        </div>
+            <div class="title" style="font-family: League;">
+              <h2>Web App <span style="border-bottom: 2px solid #307eff;">Development</span></h2>
+            </div>
+
+            <div class="content">
+              <p>Fully customized, intuitive, and feature-rich bespoke web design & development to expand the
+                reach
+                of your
+                business.
+                We build engaging, secure and high performance websites,
+                products and custom web applications using trending technologies
+                and frameworks across platforms.
+                We help you transform your e-commerce organization according to the changing demands in the
+                digital industry, along with increased scalability and productivity.
+              </p>
+            </div>
+            <div class="list">
+              <ul>
+                <li> <span style="color: #307eff; font-weight:bold">
+                    &#x3c;</span> Content Mangement System <span style="color: #307eff; font-weight:bold">/>
+                  </span> </li>
+                <li> <span style="color: #307eff; font-weight:bold">
+                    &#x3c;</span> e-Commerce <span style="color: #307eff; font-weight:bold">/>
+                  </span> </li>
+                <li> <span style="color: #307eff; font-weight:bold">
+                    &#x3c;</span> Custom Web Application <span style="color: #307eff; font-weight:bold">/>
+                  </span> </li>
+    
+              </ul>
+            </div>
+        
+
       </div>
 
-      <div class="services-image-mob-section">
-        <lottie-player src="https://assets7.lottiefiles.com/packages/lf20_4ayeqfsd.json" class="lottie" background="transparent"
-          speed="1" style="width: 400px; height: 400px;" loop autoplay>
-        </lottie-player>
-      </div>
+        <div class="services-image-mob-section">
+            <lottie-player src="https://assets7.lottiefiles.com/packages/lf20_4ayeqfsd.json" class="lottie" background="transparent"
+              speed="1" style="width: 400px; height: 400px;" loop autoplay>
+            </lottie-player>
+          </div>
+
 
       <div class="services-content-mob-section"  style="margin-top: 20px;">
         <div class="title" style="font-family: League;">
